fixed button wrapping. removed console.log

--- a/assets/sass/structure/_tree.scss
+++ b/assets/sass/structure/_tree.scss
@@ -75,6 +75,7 @@ html {
     padding: $spacing__base*0.6 $spacing__base;
     text-decoration: none;
     text-align: center;
+    display: inline-block;
 }
 
 .enp-tree__content-window {
